--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       top: 0;
       width: 100%;
       height: 6.5rem;
-      background: none;
+      background: white;
       border: 1px solid #ccc;
       text-align: center;
       z-index: 2 !important;
@@ -103,32 +103,37 @@
 <body>
   <div class="wrap">
     <div class="fixed-side-container">
-      <ul>
-        <li class="pointText"><a href="">
+      <ul class="fixed-side-1">
+        <li class="pointText"><a href="https://www.mega-mgccoffee.com/customer/?db_category=2">
             <p class="fixed-side-title">창업상담</p>
             <p class="fixed-side-text sideLineHeight">1588-<br>0656</p>
         </a></li>
-        <li><a href="" class="fixed-side-btns">
+        <li><a href="https://www.mega-mgccoffee.com/customer/?db_category=7"
+               class="fixed-side-btns">
             <p class="fixed-side-title">가맹점</p>
             <p class="fixed-side-text">인수 상담</p>
         </a></li>
-        <li><a href="" class="fixed-side-btns">
+        <li><a href="https://www.mega-mgccoffee.com/news/voc/" 
+               class="fixed-side-btns">
             <p class="fixed-side-title">고객센터</p>
             <p class="fixed-side-text">문의/접수</p>
         </a></li>
-        <li><a href="" class="fixed-side-btns">
+        <li><a href="https://www.mega-mgccoffee.com/news/voc/" 
+               class="fixed-side-btns">
             <p class="fixed-side-title">고객센터</p>
             <p class="fixed-side-text sideLineHeight">1588-<br>8298</p>
         </a></li>
-        <li><a href="" class="fixed-side-btns">
+        <li><a href="https://www.mega-mgccoffee.com/store/find/" 
+              class="fixed-side-btns ">
           <p class="fixed-side-title">(25.10.16)누적</p>
           <p class="fixed-side-text sideLineHeight">3,945호<br>오픈</p>
         </a></li>
-        <li><a href="" class="fixed-side-btns sideBtn-1280">
+        <li id="quickBtn"><a class="fixed-side-btns sideBtn-1280">
           <p class="fixed-side-title"> . . .</p>
           <p class="fixed-side-text sideLineHeight">QUICK</p>
         </a></li>
       </ul>
+        
     </div>
     <header class="header-section">
       <!-- 궁헌님 -->
@@ -203,7 +208,7 @@
   </div>
 
 
-  <script src="mainSection3.js"></script>
+  <script src="main-Section3.js"></script>
 </body>
 
 </html>
