슬라이드 작성중

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
       margin: 0 auto;
       box-sizing: border-box;
       --mega-font-color: #1c1c1B;
-      --mega-yellow-color: rgb(253, 208, 0);
-      --mega-footer-color: rgb(33, 33, 33);
+      --mega-yellow-color: #fdd000;
+      --mega-footer-color: #212121;
+      --mega-footer-font-color: #aaa;
       color: var(--mega-font-color);
     }
 
@@ -54,7 +55,7 @@
       justify-content: center;
       align-items: center;
       width: 100%;
-      height: 945px;
+      height: 100vh;
       background: #ccc;
       border: 1px solid white;
       text-align: center;
@@ -139,12 +140,31 @@
     </header>
     <main>
       <section class="main-section-1">
-        main section 1
-        <!-- 다희님 -->
+        <!-- main section 1 다희님 -->
+         <article>
+          <ul id="slide-list">
+            <li class="slide-item">
+              <div class="slide-img"></div>
+            </li>
+            <li class="slide-item">
+              <div class="slide-img"></div>
+            </li>
+            <li class="slide-item">
+              <div class="slide-img"></div>
+            </li>
+            <li class="slide-item">
+              <div class="slide-img"></div>
+            </li>
+            <li class="slide-item">
+              <div class="slide-img"></div>
+            </li>
+          </ul>
+         </article>
+         <div id="scroll-icon">스크롤을 내리세요!</div>
       </section>
       <section class="main-section-1">
-        main section 2
-        <!-- 다희님 -->
+        <!-- main section 2 다희님 -->
+
       </section>
       <section class="main-section-3">
         <article class="main-section-3-article-1">
