--- a/header_Nav.html
+++ b/header_Nav.html
@@ -12,14 +12,14 @@
     <div class="wrap">
 
 
-        <!-- Hover   
+        <!-- Hover 색상   
             RGB(255,255,255) #ffffff
             RGB(253,208,0) #fdd000 
             RGB(35,24,21) #231815
             색상
 
         -->
-        <!-- 
+        <!-- 링크
             흠  -  
             1.네비바HOVER 만들기 
             2.ul li 로 만듥
@@ -28,7 +28,8 @@
             링크넣기 
 
             로고
-            https://img.79plus.co.kr/megahp/common/img/logo_w.png 
+            https://img.79plus.co.kr/megahp/common/img/new_logo_b.png 블랙
+            https://img.79plus.co.kr/megahp/common/img/logo_w.png  화이트
 
             오른쪽
             https://img.79plus.co.kr/megahp/common/img/sns/sns_smartstore.png
@@ -39,20 +40,20 @@
             -->
 
 
-
         <header class="header-section">
-<nav id="nav_bar">
-    <a href="a">logo</a>
-    <ul class="nav_list">
-      <li><a class="nav_move" href="a">menu</a></li>
-      <li><a class="nav_move" href="a">menu</a></li>
-      <li><a class="nav_move" href="a">menu</a></li>
-      <li><a class="nav_move" href="a">menu</a></li>
-      <li><a class="nav_move" href="a">menu</a></li>
-    </ul>
+    <nav id="nav_bar">
+        <a href="a">
+            <img class="header_nav_bar_logo_img" src="https://img.79plus.co.kr/megahp/common/img/new_logo_b.png " alt=""></a>
+        <ul class="nav_list">
+            <li><a class="nav_move" href="a">menu</a></li>
+            <li><a class="nav_move" href="a">menu</a></li>
+            <li><a class="nav_move" href="a">menu</a></li>
+            <li><a class="nav_move" href="a">menu</a></li>
+            <li><a class="nav_move" href="a">menu</a></li>
+        </ul>
 
   </nav>
-            <h1>오른쪽 블로그 인스타 페북 링크 </h1>
+            <p>오른쪽 블로그 인스타 페북 링크 </p>
         </header>
 
     </div>
