--- a/main-Section.html
+++ b/main-Section.html
@@ -10,6 +10,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="main-Section3.css">
   <link rel="stylesheet" href="main-Section4.css">
+  <link rel="stylesheet" href="main-Section5.css">
   <!-- index.css -->
   <link rel="stylesheet" href="index.css">
 </head>
@@ -22,33 +23,29 @@
         <li class="pointText"><a href="https://www.mega-mgccoffee.com/customer/?db_category=2">
             <p class="fixed-side-title">창업상담</p>
             <p class="fixed-side-text sideLineHeight">1588-<br>0656</p>
-        </a></li>
-        <li><a href="https://www.mega-mgccoffee.com/customer/?db_category=7"
-               class="fixed-side-btns">
+          </a></li>
+        <li><a href="https://www.mega-mgccoffee.com/customer/?db_category=7" class="fixed-side-btns">
             <p class="fixed-side-title">가맹점</p>
             <p class="fixed-side-text">인수 상담</p>
-        </a></li>
-        <li><a href="https://www.mega-mgccoffee.com/news/voc/" 
-               class="fixed-side-btns">
+          </a></li>
+        <li><a href="https://www.mega-mgccoffee.com/news/voc/" class="fixed-side-btns">
             <p class="fixed-side-title">고객센터</p>
             <p class="fixed-side-text">문의/접수</p>
-        </a></li>
-        <li><a href="https://www.mega-mgccoffee.com/news/voc/" 
-               class="fixed-side-btns">
+          </a></li>
+        <li><a href="https://www.mega-mgccoffee.com/news/voc/" class="fixed-side-btns">
             <p class="fixed-side-title">고객센터</p>
             <p class="fixed-side-text sideLineHeight">1588-<br>8298</p>
-        </a></li>
-        <li><a href="https://www.mega-mgccoffee.com/store/find/" 
-              class="fixed-side-btns ">
-          <p class="fixed-side-title">(25.10.16)누적</p>
-          <p class="fixed-side-text sideLineHeight">3,945호<br>오픈</p>
-        </a></li>
+          </a></li>
+        <li><a href="https://www.mega-mgccoffee.com/store/find/" class="fixed-side-btns ">
+            <p class="fixed-side-title">(25.10.16)누적</p>
+            <p class="fixed-side-text sideLineHeight">3,945호<br>오픈</p>
+          </a></li>
         <li id="quickBtn"><a class="fixed-side-btns sideBtn-1280">
-          <p class="fixed-side-title"> . . .</p>
-          <p class="fixed-side-text sideLineHeight">QUICK</p>
-        </a></li>
+            <p class="fixed-side-title"> . . .</p>
+            <p class="fixed-side-text sideLineHeight">QUICK</p>
+          </a></li>
       </ul>
-        
+
     </div>
     <!-- 헤더부분 -->
     <header class="header-section">
@@ -72,23 +69,23 @@
 
       <!-- -------------------------------------------------------------------------------- -->
 
-      
+
       <section class="main-section-3">
         <article class="main-section-3-article-1">
           <ul>
             <li id="main-3-content--1">
               <div class="main-3-content-wrap">
-                <p style="margin-bottom: 1rem; font-size: 1.3rem; font-weight: 300;">거품 없는 창업비용</p>
-                <h1 class="font-w">
+                <p style="margin-bottom: 1rem; font-size: 1.5rem; font-weight: 300;">거품 없는 창업비용</p>
+                <h1 class="main3-font-w">
                   FRANCHISE
                   <br>
-                  <span id="spanDiv"></span>
-                  <span id="megaCoffeSpan">
+                  <span class="main3-spanDiv"></span>
+                  <span class="main3-megaCoffeSpan">
 
                     MEGA MGC COFFEE
                   </span>
                 </h1>
-                <h5 class="main-3-content"><span class="font-w-m">7,299</span>만원(10평 기준)</h5>
+                <h5 class="main-3-content"><span class="main3-font-w-m">7,299</span>만원(10평 기준)</h5>
               </div>
               <div class=main-3-content-bottom>
                 <p>지금, 메가MGC커피에서<br class="pc"> 창업성공 스토리를 경험해보세요.</p>
@@ -104,32 +101,50 @@
               </div>
               <a href="https://mega-mgccoffee.com/customer/?db_category=2"><button id="youtubeContactBtn">창업문의
                   바로가기</button></a>
-              <div class="hiddenContactBtn">
+              <div class="main3-hiddenContactBtn">
                 <button id="contactPhone">전화문의</button>
                 <button id="contactEmail">상담접수</button>
               </div>
             </li>
           </ul>
         </article>
-        <!-- 노수한 -->
       </section>
       <section class="main-section-4">
         <article class="main-section-4-article-1">
-        <ul>
-          <li id="main-4-content--1">
-            ss
-          </li>
-          <li id="main-4-content--2">
-            <img src="https://img.79plus.co.kr/megahp/common/img/main_mega_250827.jpg?ver=202508221660" alt="">
-          </li>
-        </ul>
+          <ul>
+            <li id="main-4-content--1">
+              <div class="main4-d-flexWrap">
+                <div class="main-3-content-wrap">
+                  <p style="margin-bottom: 1rem; font-size: 1.5rem; font-weight: 300;">메가MGC커피 이야기</p>
+                  <h1 class="main-4-font-w">
+                    MEGA SIZE
+                    <br>
+                    <span class="main3-spanDiv"></span>
+                    <span class="main3-twoShot">
+                      & 2 SHOT
+                    </span>
+                  </h1>
+                </div>
+                <div class="main-4-content-bottom">
+                  <p>100% 프리미엄 아라비카 원두를 로스팅하여,<br class="pc"> 깊고 부드러운 커피와 빅 사이즈로 구성된 <br class="pc">
+                    다양한 음료를 합리적인 가격으로 제공합니다.</p>
+                  <p>좋은 품질의 재료를, 합리적인 가격으로 제공하여<br class="pc"> 좋은 품질의 음료를 저렴한 가격으로 만나보실 수 있습니다.</p>
+                  <div class="main4-btns">
+                    <a><button class="main-4-content-btn" id="aboutBrand">브랜드소개</button></a>
+                    <a></a><button class="main-4-content-btn" id="contactFranchise">창업문의</button></a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li id="main-4-content--2">
+              <img src="https://img.79plus.co.kr/megahp/common/img/main_mega_250827.jpg?ver=202508221660" alt="">
+            </li>
+          </ul>
         </article>
-        <!-- 노수한 -->
       </section>
       <section class="main-section-5">
-        main section 5
-
-        <!-- 노수한 -->
+        <article class="main-section-5-article-1 main5Temp">main-section-5 TOP</article>
+        <article class="main-section-5-article-2 main5Temp">main-section-5 BOTTOM</article>
       </section>
     </main>
     <!-- 푸터부분 -->
@@ -140,7 +155,7 @@
   </div>
 
 
-  <script src="main-Section3.js"></script>
+  <script src="main-Section345.js"></script>
 </body>
 
 </html>
