--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>메가MGC커피</title>
-  <!-- font 
+  <title>Document</title>
+  <!-- font  -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap">
-  CSS
+  <!-- CSS -->
   <link rel="stylesheet" href="main-Section3.css">
-  <link rel="stylesheet" href="main-Section4.css"> -->
-
-  <!-- index.css -->
+  <link rel="stylesheet" href="main-Section4.css">
+  <link rel="stylesheet" href="main-Section5.css">
+  <link rel="stylesheet" href="header_Nav.css">
+  <!-- 공용 index.css -->
   <link rel="stylesheet" href="index.css">
 </head>
 
@@ -23,64 +24,133 @@
         <li class="pointText"><a href="https://www.mega-mgccoffee.com/customer/?db_category=2">
             <p class="fixed-side-title">창업상담</p>
             <p class="fixed-side-text sideLineHeight">1588-<br>0656</p>
-        </a></li>
-        <li><a href="https://www.mega-mgccoffee.com/customer/?db_category=7"
-               class="fixed-side-btns">
+          </a></li>
+        <li><a href="https://www.mega-mgccoffee.com/customer/?db_category=7" class="fixed-side-btns">
             <p class="fixed-side-title">가맹점</p>
             <p class="fixed-side-text">인수 상담</p>
-        </a></li>
-        <li><a href="https://www.mega-mgccoffee.com/news/voc/" 
-               class="fixed-side-btns">
+          </a></li>
+        <li><a href="https://www.mega-mgccoffee.com/news/voc/" class="fixed-side-btns">
             <p class="fixed-side-title">고객센터</p>
             <p class="fixed-side-text">문의/접수</p>
-        </a></li>
-        <li><a href="https://www.mega-mgccoffee.com/news/voc/" 
-               class="fixed-side-btns">
+          </a></li>
+        <li><a href="https://www.mega-mgccoffee.com/news/voc/" class="fixed-side-btns">
             <p class="fixed-side-title">고객센터</p>
             <p class="fixed-side-text sideLineHeight">1588-<br>8298</p>
-        </a></li>
-        <li><a href="https://www.mega-mgccoffee.com/store/find/" 
-              class="fixed-side-btns ">
-          <p class="fixed-side-title">(25.10.16)누적</p>
-          <p class="fixed-side-text sideLineHeight">3,945호<br>오픈</p>
-        </a></li>
+          </a></li>
+        <li><a href="https://www.mega-mgccoffee.com/store/find/" class="fixed-side-btns ">
+            <p class="fixed-side-title">(25.10.16)누적</p>
+            <p class="fixed-side-text sideLineHeight">3,945호<br>오픈</p>
+          </a></li>
         <li id="quickBtn"><a class="fixed-side-btns sideBtn-1280">
-          <p class="fixed-side-title"> . . .</p>
-          <p class="fixed-side-text sideLineHeight">QUICK</p>
-        </a></li>
+            <p class="fixed-side-title"> . . .</p>
+            <p class="fixed-side-text sideLineHeight">QUICK</p>
+          </a></li>
       </ul>
-        
+
     </div>
     <!-- 헤더부분 -->
-    <header class="header-section">
-      <!-- 궁헌님 -->
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus praesentium libero eligendi, omnis distinctio
-      cumque
-      vel facere voluptatibus atque, iusto voluptatem. Explicabo vitae iste tenetur eos. In quam cupiditate inventore?
-      <h1>Header Fixed</h1>
-    </header>
+      <header class="header-section">
+        <nav id="nav_bar">
+          <a href="#">
+            <img class="header_nav_bar_logo_img" src="https://img.79plus.co.kr/megahp/common/img/new_logo_b.png " alt="">
+          </a>
+          <ul class="nav_list">
+            <li><a class="nav_move" href="a">menu</a></li>
+            <li><a class="nav_move" href="a">menu</a></li>
+            <li><a class="nav_move" href="a">menu</a></li>
+            <li><a class="nav_move" href="a">menu</a></li>
+            <li><a class="nav_move" href="a">menu</a></li>
+          </ul>
+        </nav>
+        <p>오른쪽 블로그 인스타 페북 링크 </p>
+      </header>
     <!-- 메인부분 -->
     <main>
-      <!-- 다희님 -->
       <section class="main-section-1">
         main section 1
-        
+        <!-- 다희님 -->
       </section>
       <section class="main-section-1">
         main section 2
         <!-- 다희님 -->
       </section>
-        <!-- 노수한 -->
+      <!-- -------------------------------------------------------------------------------- -->
+
       <section class="main-section-3">
-         main section 3
+        <article class="main-section-3-article-1">
+          <ul>
+            <li id="main-3-content--1">
+              <div class="main-3-content-wrap">
+                <p style="margin-bottom: 1rem; font-size: 1.5rem; font-weight: 300;">거품 없는 창업비용</p>
+                <h1 class="main3-font-w">
+                  FRANCHISE
+                  <br>
+                  <span class="main3-spanDiv"></span>
+                  <span class="main3-megaCoffeSpan">
+
+                    MEGA MGC COFFEE
+                  </span>
+                </h1>
+                <h5 class="main-3-content"><span class="main3-font-w-m">7,299</span>만원(10평 기준)</h5>
+              </div>
+              <div class=main-3-content-bottom>
+                <p>지금, 메가MGC커피에서<br class="pc"> 창업성공 스토리를 경험해보세요.</p>
+                <p>합리적인 창업비용과 다양한 경험을 바탕으로,<br class="pc"> 다양한 노하우를 전수하여 창업 성공을 약속드립니다.</p>
+              </div>
+            </li>
+            <li id="main-3-content--2">
+              <div id="iframe-container">
+                <iframe src="https://www.youtube.com/embed/Ppe5NIRco8A?autoplay=1&mute=1" title="메가MGC커피 창업 정보 안내"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share "
+                  referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+              </div>
+              <a href="https://mega-mgccoffee.com/customer/?db_category=2"><button id="youtubeContactBtn">창업문의
+                  바로가기</button></a>
+              <div class="main3-hiddenContactBtn">
+                <button id="contactPhone">전화문의</button>
+                <button id="contactEmail">상담접수</button>
+              </div>
+            </li>
+          </ul>
+        </article>
       </section>
       <section class="main-section-4">
-        <!-- 노수한 -->
+        <article class="main-section-4-article-1">
+          <ul>
+            <li id="main-4-content--1">
+              <div class="main4-d-flexWrap">
+                <div class="main-3-content-wrap">
+                  <p style="margin-bottom: 1rem; font-size: 1.5rem; font-weight: 300;">메가MGC커피 이야기</p>
+                  <h1 class="main-4-font-w">
+                    MEGA SIZE
+                    <br>
+                    <span class="main3-spanDiv"></span>
+                    <span class="main3-twoShot">
+                      & 2 SHOT
+                    </span>
+                  </h1>
+                </div>
+                <div class="main-4-content-bottom">
+                  <p>100% 프리미엄 아라비카 원두를 로스팅하여,<br class="pc"> 깊고 부드러운 커피와 빅 사이즈로 구성된 <br class="pc">
+                    다양한 음료를 합리적인 가격으로 제공합니다.</p>
+                  <p>좋은 품질의 재료를, 합리적인 가격으로 제공하여<br class="pc"> 좋은 품질의 음료를 저렴한 가격으로 만나보실 수 있습니다.</p>
+                  <div class="main4-btns">
+                    <a><button class="main-4-content-btn" id="aboutBrand">브랜드소개</button></a>
+                    <a></a><button class="main-4-content-btn" id="contactFranchise">창업문의</button></a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li id="main-4-content--2">
+              <img src="https://img.79plus.co.kr/megahp/common/img/main_mega_250827.jpg?ver=202508221660" alt="">
+            </li>
+          </ul>
+        </article>
       </section>
       <section class="main-section-5">
-        main section 5
-
-        <!-- 노수한 -->
+        <article class="main-section-5-article-1 main5Temp">main-section-5 TOP</article>
+        <article class="main-section-5-article-2 main5Temp">main-section-5 BOTTOM</article>
       </section>
     </main>
     <!-- 푸터부분 -->
@@ -90,16 +160,10 @@
     </footer>
   </div>
 
-
-  <script>
-  const $quickBtn = document.querySelector("#quickBtn");
-  const q = document.querySelectorAll(".fixed-side-1 li");
-
-  $quickBtn.addEventListener("click", () => {
-    q.forEach(qq => {
-        qq.classList.toggle("f-hdn");
-    });})
-  </script>
+  <!-- 사이드  -->
+  <script src="index.js"></script>
+  <!-- main 2 button event -->
+  <script src="main-Section345.js"></script>
 </body>
 
 </html>
