--- a/header_Nav.html
+++ b/header_Nav.html
@@ -41,19 +41,53 @@
 
 
         <header class="header-section">
-    <nav id="nav_bar">
+    <nav id="header_nav_bar">
         <a href="a">
             <img class="header_nav_bar_logo_img" src="https://img.79plus.co.kr/megahp/common/img/new_logo_b.png " alt=""></a>
-        <ul class="nav_list">
-            <li><a class="nav_move" href="a">menu</a></li>
-            <li><a class="nav_move" href="a">menu</a></li>
-            <li><a class="nav_move" href="a">menu</a></li>
-            <li><a class="nav_move" href="a">menu</a></li>
-            <li><a class="nav_move" href="a">menu</a></li>
+        <ul class="header_nav_list">
+            <li class="header_nav_item" ><a href="#">menu1</a>
+                <ul class="header_item_dropdown">
+                    <li><a href="#"> 아이템 1_1</a></li>
+                    <li><a href="#"> 아이템 1_2</a></li>
+                    <li><a href="#"> 아이템 1_3</a></li>
+                </ul>
+            </li>
+            <li class="header_nav_item" ><a href="#">menu2</a>
+                <ul class="header_item_dropdown">
+                    <li><a href="#"> 아이템 2_1</a></li>
+                    <li><a href="#"> 아이템 2_2</a></li>
+                    <li><a href="#"> 아이템 2_3</a></li>
+                </ul>
+            </li>
+            <li class="header_nav_item" ><a href="#">menu3</a>
+                <ul class="header_item_dropdown">
+                    <li><a href="#"> 아이템 3_1</a></li>
+                    <li><a href="#"> 아이템 3_2</a></li>
+                    <li><a href="#"> 아이템 3_3</a></li>
+                </ul>
+            </li>
+            <li class="header_nav_item" ><a href="#">menu4</a>
+                <ul class="header_item_dropdown">
+                    <li><a href="#"> 아이템 4_1</a></li>
+                    <li><a href="#"> 아이템 4_2</a></li>
+                    <li><a href="#"> 아이템 4_3</a></li>
+                </ul>
+            </li>
+            <li class="header_nav_item" ><a href="#">menu5</a>
+                <ul class="header_item_dropdown">
+                    <li><a href="#"> 아이템 5_1</a></li>
+                    <li><a href="#"> 아이템 5_2</a></li>
+                    <li><a href="#"> 아이템 5_3</a></li>
+                </ul>
+            </li>
         </ul>
-
-  </nav>
-            <p>오른쪽 블로그 인스타 페북 링크 </p>
+        <div class="header_nav_move_bar_link">
+        <a class="header_nav_move_link" href="a"> <img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_smartstore.png" alt=""></a>
+        <a class="header_nav_move_link" href="a"> <img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_instagram.png" alt=""></a>
+        <a class="header_nav_move_link" href="a"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_facebook.png" alt=""></a>
+        <a class="header_nav_move_link" href="a"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_blog.png" alt=""></a>
+    </div>
+    </nav>    
         </header>
 
     </div>
