--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <!-- font  -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap">
   <!-- CSS -->
-  <link rel="stylesheet" href="main-Section3.css">
-  <link rel="stylesheet" href="main-Section4.css">
-  <link rel="stylesheet" href="main-Section5.css">
-  <link rel="stylesheet" href="header_Nav.css">
+  <link rel="stylesheet" href="./1024 head+main345/mainSection1.css">
+  <link rel="stylesheet" href="./1024 head+main345/mainSection2.css">
+  <link rel="stylesheet" href="./1024 head+main345/main-Section3.css">
+  <link rel="stylesheet" href="./1024 head+main345/main-Section4.css">
+  <link rel="stylesheet" href="./1024 head+main345/main-Section5.css">
+  <link rel="stylesheet" href="./1024 head+main345/header_Nav.css">
   <!-- 공용 index.css -->
   <link rel="stylesheet" href="index.css">
 </head>
@@ -66,14 +68,66 @@
       </header>
     <!-- 메인부분 -->
     <main>
-      <section class="main-section-1">
-        main section 1
-        <!-- 다희님 -->
+      <!-- 나다희 -->
+      <!-- main section 1 -->
+      <section id="main" class="main-section-1">
+         <article>
+          <ul id="main-slide">
+            <li class="slide-item">
+              <div class="slide-img"></div>
+            </li>
+            <li class="slide-item">
+              <div class="slide-img"></div>
+            </li>
+            <li class="slide-item">
+              <div class="slide-img"></div>
+            </li>
+            <li class="slide-item">
+              <div class="slide-img"></div>
+            </li>
+            <li class="slide-item">
+              <div class="slide-img"></div>
+            </li>
+          </ul>
+         </article>
+         <!--스크롤 아이콘-->
+         <div id="icon-box">
+          <div class="icon-mouse">
+            <div class="icon-wheel"></div>
+          </div>
+          <div class="icon-text">스크롤을 내리세요!</div>
+         </div>
+         <!--dots-->
+         <div class="controls"><!--점 생성--></div>
       </section>
-      <section class="main-section-1">
-        main section 2
-        <!-- 다희님 -->
+      <section id="menu" class="main-section-1">
+        <!-- main section 2 -->
+         <article class="main2-box">
+          <!--왼쪽 컨텐츠-->
+            <div class="info-inner">
+              <div class="info-box">
+                <p>메가MGC커피 가을시즌 신메뉴</p>
+                <h3>리얼타임 청춘기록</h3>
+              </div>
+              <p>RIIZE into Fall</p>
+              <p>깊어지는 가을🍂<br>함께할수록 더 특별한 순간의 <span class="b">리얼타임 청춘기록</span>을<br>메가MGC커피에서 라이즈와 함께 만나보세요</p>
+              <button class="btn">메뉴 더보기</button>
+            </div>
+          </article>
+          <!--오른쪽 컨텐츠-->
+          <article class="main2-box">
+            <div id="slide-container">
+              <div id="slide-wrap">
+                <!--JS 슬라이드 생성 구역-->
+              </div>
+            </div>
+            <div class="main2-btn-controls">
+              <button class="main2-slide-btn prev"></button>
+              <button class="main2-slide-btn next"></button>
+            </div>
+          </article>
       </section>
+      <!-- 나다희 영역 끝 -->
       <!-- -------------------------------------------------------------------------------- -->
 
       <section class="main-section-3">
@@ -161,9 +215,11 @@
   </div>
 
   <!-- 사이드  -->
-  <script src="index.js"></script>
+  <script src="./1024 head+main345/index.js"></script>
   <!-- main 2 button event -->
-  <script src="main-Section345.js"></script>
+  <script src="./1024 head+main345/main-Section345.js"></script>
+  <!--main 2-->
+  <script src="./1024 head+main345/mainSection2.js"> </script>
 </body>
 
 </html>
