--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <title>Document</title>
   <!-- font  -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap">
-  <!-- CSS -->
-  <link rel="stylesheet" href="./1024 head+main345/mainSection1.css">
-  <link rel="stylesheet" href="./1024 head+main345/mainSection2.css">
-  <link rel="stylesheet" href="./1024 head+main345/main-Section3.css">
-  <link rel="stylesheet" href="./1024 head+main345/main-Section4.css">
-  <link rel="stylesheet" href="./1024 head+main345/main-Section5.css">
-  <link rel="stylesheet" href="./1024 head+main345/header_Nav.css">
   <!-- 공용 index.css -->
   <link rel="stylesheet" href="index.css">
+  <!-- CSS -->
+  <link rel="stylesheet" href="./main 1/mainSection1.css">
+  <link rel="stylesheet" href="./main 1/mainSection2.css">
+  <link rel="stylesheet" href="./main 2/main-Section3.css">
+  <link rel="stylesheet" href="./main 2/main-Section4.css">
+  <link rel="stylesheet" href="./main 2/main-Section5.css">
+  <link rel="stylesheet" href="./head/header_Nav.css">
 </head>
 
 <body>
@@ -68,7 +68,7 @@
       </header>
     <!-- 메인부분 -->
     <main>
-      <!-- 나다희 -->
+       <!-- 나다희 -->
       <!-- main section 1 -->
       <section id="main" class="main-section-1">
          <article id="main1-wrap">
@@ -191,8 +191,73 @@
         </article>
       </section>
       <section class="main-section-5">
-        <article class="main-section-5-article-1 main5Temp">main-section-5 TOP</article>
-        <article class="main-section-5-article-2 main5Temp">main-section-5 BOTTOM</article>
+        <div class="main5-event-wrap">
+        <article class="main-section-5-title">
+          <p>메가MGC커피 소식</p>
+          <h1>
+            <span class="main5-event"> MEGA EVENT </span>
+        </h1>
+        </article>
+        <article class="main-section-5-content-wrap">
+          <ul>
+            <li>
+              <a href="https://mega-mgccoffee.com/bbs/detail/?YmJzX2lkeD00OTImYmJzX2NhdGVnb3J5PTMmYmJzX2RldGFpbF9jYXRlZ29yeT0mYmJzX3BhZ2U9MQ==">
+              <div class="main5-card">
+                <div class="main5-card-img">
+              <img src="https://img.79plus.co.kr/megahp/manager/upload/bbs/20251023012157_1778761619103_sYedgWDytj.jpg" alt="">
+              </div>
+              <div class="main5-card-content">
+                <div class="main5-card-content-wrap">
+                <div><p>[출시] MGC X RIIZE 콜라보 굿즈 2종 출시</p></div>
+                <p>2025-10-23</p>
+                </div>
+              </div>
+              </div>
+              </a>
+            </li>
+            <li>
+              <a href="https://mega-mgccoffee.com/bbs/detail/?YmJzX2lkeD00OTImYmJzX2NhdGVnb3J5PTMmYmJzX2RldGFpbF9jYXRlZ29yeT0mYmJzX3BhZ2U9MQ==">
+              <div class="main5-card">
+                <div class="main5-card-img">
+              <img src="https://img.79plus.co.kr/megahp/manager/upload/bbs/20251016193157_1778216824654_gxAAFTeIsn.png" alt="">
+              </div>
+              <div class="main5-card-content">
+                <div class="main5-card-content-wrap">
+                <div><p>[당첨자발표] RIIZE 프리퀀시 이벤트</p>
+                  
+                </div>
+                <p>[당첨자발표] RIIZE 프리퀀시 이벤트 최종 당첨자를 발표합니다. 당첨자에 한하여 RIIZE 프리퀀시 이벤트 티켓
+                  (QR) 탭에서 팬사인회 일정 및 장소를 확인하실 수 있습니다. *당첨자 선정은 프리퀀시판 완성자에 한하여 랜덤으로
+                  추첨 되었습니다. 이벤트에 참여해주신 모든 분들께 감사드립니다. 
+                </p>
+                <p>2025-10-23</p>
+                </div>
+              </div>
+              </div>
+              </a>
+            </li>
+              <li>
+                <a href="https://mega-mgccoffee.com/bbs/detail/?YmJzX2lkeD00ODYmYmJzX2NhdGVnb3J5PTMmYmJzX2RldGFpbF9jYXRlZ29yeT0mYmJzX3BhZ2U9MQ==">
+              <div class="main5-card">
+                <div class="main5-card-img">
+              <img src="https://img.79plus.co.kr/megahp/manager/upload/bbs/20251002122332_1776969166888_skdYUgksMt.jpg" alt="">
+              </div>
+              <div class="main5-card-content">
+                <div class="main5-card-content-wrap">
+                <div><p>[제휴] 메가MGC커피 X KT구독팩 출시</p></div>
+                <p>2025-10-23</p>
+                </div>
+              </div>
+              </div>
+              </a>
+            </li>
+          </ul>
+        </article>
+        <article class="main-section-5-text-box">
+          <p>전체 매장 및 각 매장에서 다양한 이벤트가 진행중 입니다.</p>
+          <a href="https://mega-mgccoffee.com/bbs/?bbs_category=3"><button>이벤트 더보기</button></a>
+        </article>
+      </div>
       </section>
     </main>
     <!-- 푸터부분 -->
@@ -203,13 +268,12 @@
   </div>
 
   <!-- 사이드  -->
-  <script src="./1024 head+main345/index.js"></script>
+  <script src="./index.js"></script>
   <!-- main 2 button event -->
-  <script src="./1024 head+main345/main-Section345.js"></script>
-  
-  <!--main 1,2-->
-  <script src="./1024 head+main345/mainSection1.js"></script>
-  <script src="./1024 head+main345/mainSection2.js"></script>
+  <script src="./main 2/main-Section345.js"></script>
+  <!--main 2-->
+  <script src="./main 1/mainSection2.js"> </script>
+  <script src="./main 1/mainSection1.js"> </script>
 </body>
 
 </html>
