--- a/테스트/2Test.html
+++ b/테스트/2Test.html
@@ -7,7 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-
+<header class="header-section">
+<nav class="header_nav_bar">
+        <a href="a">
+        <img class="header_nav_bar_logo_img" src="https://img.79plus.co.kr/megahp/common/img/new_logo_b.png " alt=""></a>
 
 <nav class="navbar">
   <ul class="nav-menu">
@@ -37,8 +40,7 @@
     </li>
   </ul>
 </nav>
-
-
-
+</nav>
+</header>
 </body>
 </html>
