--- a/header_Nav.html
+++ b/header_Nav.html
@@ -10,65 +10,84 @@
 
 <body>
     <div class="wrap">
-
-
-
-
-        <header class="header-section">
-
-    <nav id="header_nav_bar">
-        <a href="a">
-            <img class="header_nav_bar_logo_img" src="https://img.79plus.co.kr/megahp/common/img/new_logo_b.png " alt=""></a>
-
-
-<nav class="header_navbar">
-        <ul class="header_nav_menu">
-            <li class="header_nav_item" ><a href="#">menu1</a>
-                <ul class="header_item_dropdown">
-                    <li><a href="#"> 아이템 1_1</a></li>
-                    <li><a href="#"> 아이템 1_2</a></li>
-                    <li><a href="#"> 아이템 1_3</a></li>
-                </ul>
-            </li>
-            <li class="header_nav_item" ><a href="#">menu2</a>
-                <ul class="header_item_dropdown">
-                    <li><a href="#"> 아이템 2_1</a></li>
-                    <li><a href="#"> 아이템 2_2</a></li>
-                    <li><a href="#"> 아이템 2_3</a></li>
-                </ul>
-            </li>
-            <li class="header_nav_item" ><a href="#">menu3</a>
-                <ul class="header_item_dropdown">
-                    <li><a href="#"> 아이템 3_1</a></li>
-                    <li><a href="#"> 아이템 3_2</a></li>
-                    <li><a href="#"> 아이템 3_3</a></li>
-                </ul>
-            </li>
-            <li class="header_nav_item" ><a href="#">menu4</a>
-                <ul class="header_item_dropdown">
-                    <li><a href="#"> 아이템 4_1</a></li>
-                    <li><a href="#"> 아이템 4_2</a></li>
-                    <li><a href="#"> 아이템 4_3</a></li>
-                </ul>
-            </li>
-            <li class="header_nav_item" ><a href="#">menu5</a>
-                <ul class="header_item_dropdown">
-                    <li><a href="#"> 아이템 5_1</a></li>
-                    <li><a href="#"> 아이템 5_2</a></li>
-                    <li><a href="#"> 아이템 5_3</a></li>
-                </ul>
-            </li>
+        
+<header class="header-section">
+    <div class="header-inner">
+      <div class="header-logo">
+        <a href="#">
+            <img src="https://img.79plus.co.kr/megahp/common/img/new_logo_b.png" alt="Mega Coffee Logo">
+        </a>
+      </div>
+      <nav class="header-nav">
+        <ul class="header-nav-list">
+          <li class="header-nav-item">
+            <a href="#">메가 스토리</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">브랜드</a></li>
+              <li class="header-submenu-item"><a href="#">BI</a></li>
+              <li class="header-submenu-item"><a href="#">오시는 길</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">메뉴소개</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">음료</a></li>
+              <li class="header-submenu-item"><a href="#">푸드</a></li>
+              <li class="header-submenu-item"><a href="#">상품</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">매장</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">매장</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">매가소식</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+              <li class="header-submenu-item"><a href="#">매장찾기</a></li>
+            </ul>
+          </li>
+          <li class="header-nav-item">
+            <a href="#">채용</a>
+            <ul class="header-submenu">
+              <li class="header-submenu-item"><a href="#">채용안내</a></li>
+            </ul>
+          </li>
         </ul>
-        </nav>
-        <div class="header_nav_move_bar_link">
-        <a class="header_nav_move_link" href="a"> <img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_smartstore.png" alt=""></a>
-        <a class="header_nav_move_link" href="a"> <img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_instagram.png" alt=""></a>
-        <a class="header_nav_move_link" href="a"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_facebook.png" alt=""></a>
-        <a class="header_nav_move_link" href="a"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_blog.png" alt=""></a>
-    </div>
-    </nav>    
-        </header>
+      </nav>
+      <div class="header-nav-move-bar-link">
+        <div class="header-nav-move-bar-link-click">
+          <a href="#"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_smartstore.png" alt=""></a>
 
+        </div>
+        <div class="header-nav-move-bar-link-click">
+          <a href="#"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_instagram.png" alt=""></a>
+
+        </div>
+        <div class="header-nav-move-bar-link-click">
+          <a href="#"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_facebook.png" alt=""></a>
+
+        </div>
+        <div class="header-nav-move-bar-link-click">
+          <a href="#"><img src="https://img.79plus.co.kr/megahp/common/img/sns/sns_blog.png" alt=""></a>
+
+        </div>
+      </div>
+    </div>
+  </header>
     </div>
     <script src="./header_Nav.js"></script>
 </body>
